--- a/index.html
+++ b/index.html
@@ -4,32 +4,48 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Carta de San Valentín</title>
+    <link
+      rel="shortcut icon"
+      href="img/love-svgrepo-com.svg"
+      type="image/x-icon"
+    />
     <link rel="stylesheet" href="css/styles.css" />
   </head>
   <body>
+    <audio src="sound/Song1.mp3" autoplay loop></audio>
     <header class="encabezado">
-      <h1>Feliz San Valentín, mi amor ❤️</h1>
+      <h1>Felices Tres Meses, Mon Chérie ❤️</h1>
     </header>
 
     <main class="contenido">
       <section class="izquierda">
         <div class="video-superior">
-          <video src="video/up.mp" autoplay loop muted></video>
+          <video src="video/up.mp4" autoplay loop muted></video>
         </div>
         <div class="video-inferior">
-          <video src="video/left.mp" autoplay loop muted></video>
-          <video src="video/right.mp" autoplay loop muted></video>
+          <video src="video/left.mp4" autoplay loop muted></video>
+          <video src="video/right.mp4" autoplay loop muted></video>
         </div>
       </section>
       <section class="derecha">
         <div class="mensaje">
           <h2>EL AMOR MÁS BONITO</h2>
           <p>
-            No recuerdo haber tenido a alguien como tú. El desorden de emociones
-            que provoca tu sonrisa; lo que me haces sentir; la forma en que me
-            miras; el contacto de nuestros labios; el caos que ordenas y lo bien
-            que encajas en mi vida. No recuerdo haber tenido un amor así: tan
-            fuerte, tan real y tan bonito. ❤️
+            No recuerdo haber tenido a alguien como tú.
+            <br />
+            El desorden de emociones que provoca tu sonrisa;
+            <br />
+            lo que me haces sentir;
+            <br />
+            la forma en que me miras;
+            <br />
+            el contacto de nuestros labios;
+            <br />
+            el caos que ordenas y lo bien que encajas en mi vida.
+            <br />
+            <br />
+            No recuerdo haber tenido un amor así: tan fuerte, tan
+            real y tan bonito. ❤️
           </p>
           <button class="boton-amor">
             <a href="test.html">💌 Para ti 💌</a>
