--- a/test.html
+++ b/test.html
@@ -4,6 +4,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="css/test.css" />
+    <link
+      rel="shortcut icon"
+      href="img/love-svgrepo-com.svg"
+      type="image/x-icon"
+    />
     <!--     <link rel="stylesheet" href="css/particles.css" />
  -->
     <title>Test</title>
@@ -49,6 +54,18 @@
       <div class="buttons" style="display: none">
         <a href="" class="btn yes">Si</a>
         <button class="btn no">No</button>
+      </div>
+    </div>
+    <!-- Modal -->
+    <div id="modal" class="modal" style="display: none">
+      <div class="modal-content">
+        <span class="close">&times;</span>
+        <h2>ESOOOOO!</h2>
+        <p>Sabia que aceptarias</p>
+        <p>Aqui esta tu primer regalo:</p>
+        <a href="docs/Para Ari.pdf" class="download-btn" download
+          >Primer regalo
+        </a>
       </div>
     </div>
 
