--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Carta de San Valentín</title>
+    <title>Ari's Gift</title>
     <link
       rel="shortcut icon"
       href="img/love-svgrepo-com.svg"
@@ -12,7 +12,8 @@
     <link rel="stylesheet" href="css/styles.css" />
   </head>
   <body>
-    <audio src="sound/Song1.mp3" autoplay loop></audio>
+    <audio src="sound/Song1.mp3" loop></audio>
+
     <header class="encabezado">
       <h1>Felices Tres Meses, Mon Chérie ❤️</h1>
     </header>
@@ -53,5 +54,6 @@
         </div>
       </section>
     </main>
+    <script src="js/audio.js"></script>
   </body>
 </html>
